--- a/frontend/police-system/src/App.css
+++ b/frontend/police-system/src/App.css
@@ -2,16 +2,21 @@
   text-align: center;
 }
 
+.container {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +40,40 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.form-signin {
+  margin-top: 5em;
+  /* justify-content: center;
+  align-items: center; */
+}
+
+.form {
+  padding: 2rem;
+  border: 1px solid rgba(227, 227, 227, 1);
+  border-radius: 25px;
+}
+
+.nav-link:hover {
+  color: transparent;
+}
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: 15px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
